# JasonGrace2282.github.io

./: .gitignore  .pre-commit-config.yaml  README.md  about.md  blog.md  conf.py  gatsby-browser.js  gatsby-config.js  gitprofile.config.ts  index.rst  justfile  myst.yaml  package-lock.json  package.json  pyproject.toml  writings.md
.github/workflows/: deploy.yaml
_static/: custom.css
_templates/: hello.html
blog/graphics/: first-raytracer.md  vulkan-triangle.md
blog/physics/: basic-fluids.md  railcar-jumping.md
blog/programming/: docker-compose-with-dind.md  pr-reviews.md  python-string-format.md
content/blog/manim-experimental-migration/: index.md
content/blog/manim-thoughts-7-17/: index.md
content/blog/rustrays/: index.md
content/blog/vulkan-triangle/: index.md
src/components/: bio.js
