[project]
name = "site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ablog>=0.11.11",
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.15.4",
    "rust-just>=1.36.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=8.1.3",
]

[tool.uv]
dev-dependencies = []
